jump button has been fixed

--- a/style.css
+++ b/style.css
@@ -148,4 +148,22 @@ header img {
     /* margin: 0 auto; */
 }
 
+.jump{
+    width: 40%;
+    height: 4vh;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    bottom: -6rem;
+    left: 6.5rem;
+}
 
+.jump img{
+    width: 100%;
+    /* height: 5.5vh; */
+}
+
+/* .jump img {
+    width: 200px; 
+    height: auto;
+} */
